Fix mobile drawtab z-index

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -22,7 +22,7 @@ body:has(.dashboard-progress-chart .container.plan.isFloating) {
     top: 65px;
     width: 30px;
     height: 150px;
-    z-index: 252;
+    z-index: 301;
     display: none;
     > button {
         // display: none;
@@ -30,7 +30,7 @@ body:has(.dashboard-progress-chart .container.plan.isFloating) {
         left: 0px;
         height: 30px;
         width: 30px;
-        z-index: 252;
+        z-index: 1;
         padding: 0;
     }
 }
@@ -82,7 +82,7 @@ body:has(.worksheet-container.selected .full-score-mark) {
     left: 1px;
     border: 1px solid;
     width: calc(100vw - 50px);
-    z-index: 253;
+    z-index: 2;
     background-color: rgb(240, 240, 247);
     max-height: calc(-20px + 100dvh);
     height: calc(-20px + 100dvh);
